[package]
name = "ctry"
version = "0.5.1"
edition = "2024"
authors = ["Timo Furrer <tuxtimo@gmail.com>", "github.com/pepa65"]
description = "Retry CLI commands"
repository = "https://github.com/pepa65/ctry"
documentation = "https://docs.rs/ctry/"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]

[[bin]]
name = "ctry"
path = "src/main.rs"

[dependencies]
clap = "2"
