[package]
name = "ctry"
version = "1.1.5"
edition = "2024"
authors = ["Timo Furrer <tuxtimo@gmail.com>", "github.com/pepa65"]
description = "Retry CLI commands"
repository = "https://github.com/pepa65/ctry"
documentation = "https://docs.rs/ctry/"
readme = "README.md"
license = "MIT"
keywords = ["cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "ctry"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/{version}/{name}"
pkg-fmt = "bin"
disabled-strategies = ["quick-install", "compile"]
target-family = "Linux"
target-arch = "X86_64"

[dependencies]
clap = "2"
